RESOLVED FIXED189376
Ignore-opens-during-unload counter of a parent should apply to its children during beforeunload event
https://bugs.webkit.org/show_bug.cgi?id=189376
Summary Ignore-opens-during-unload counter of a parent should apply to its children d...
Timothy Gu
Reported 2018-09-06 14:37:42 PDT
Per https://html.spec.whatwg.org/multipage/browsing-the-web.html#prompt-to-unload-a-document, the ignore-opens-during-unload counter of the document on which "prompt to unload" is called should stay incremented even as its descendants are being prompted for unload. This is the behavior of Firefox as well as Chrome 70+. Test is available at https://github.com/web-platform-tests/wpt/blob/master/html/webappapis/dynamic-markup-insertion/opening-the-input-stream/ignore-opens-during-unload.window.js. In particular, the "document.open should bail out when ignore-opens-during-unload is greater than 0 during beforeunload event (open(parent) while unloading parent and child)" test currently fails.
Attachments
Patch (4.68 KB, patch)
2018-09-26 10:42 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2018-09-09 13:33:27 PDT
Chris Dumez
Comment 2 2018-09-26 10:42:38 PDT
WebKit Commit Bot
Comment 3 2018-09-26 12:30:02 PDT
Comment on attachment 350870 [details] Patch Clearing flags on attachment: 350870 Committed r236517: <https://trac.webkit.org/changeset/236517>
WebKit Commit Bot
Comment 4 2018-09-26 12:30:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.