Ignore-opens-during-unload counter of a parent should apply to its children during beforeunload event https://bugs.webkit.org/show_bug.cgi?id=189376 <rdar://problem/44282754>

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

Rebaseline existing test now that one more check is passing.

* web-platform-tests/html/webappapis/dynamic-markup-insertion/opening-the-input-stream/ignore-opens-during-unload.window-expected.txt:

Source/WebCore:

Make sure the Ignore-opens-during-unload counter of a parent stays incremented while we are firing the
beforeunload event for its descendants, as per:
- https://html.spec.whatwg.org/multipage/browsing-the-web.html#prompt-to-unload-a-document

No new tests, rebaselined existing tests.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::shouldClose):
(WebCore::FrameLoader::dispatchBeforeUnloadEvent):


Canonical link: https://commits.webkit.org/204960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236517 268f45cc-cd09-0410-ab3c-d52691b4dbfc